--- a/frontend/views/student.ejs
+++ b/frontend/views/student.ejs
@@ -191,6 +191,10 @@
     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
   </symbol>
+  <symbol id="bookmark" viewBox="0 0 16 16">
+    <path d="M5 0h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2 2 2 0 0 1-2 2H3a2 2 0 0 1-2-2h1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1H1a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v9a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1H3a2 2 0 0 1 2-2z"/>
+    <path d="M1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 2.5v.5H.5a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1H2v-.5a.5.5 0 0 0-1 0z"/>
+  </symbol>
 </svg>
 
 
@@ -216,6 +220,14 @@
           <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profile-modal">My profile</a>
         </div>
       </div>
+      <div class="col d-flex align-items-center">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#bookmark"/></svg>
+        </div>
+        <div>
+          <a href="/view-loans" class="btn btn-primary">My Loans</a>
+        </div>
+      </div>
     </div>
   </div>
 </main>
@@ -228,7 +240,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <form id="pswd-form" action="/password" method="POST">
+            <form id="pswd-form" action="/password-change" method="POST">
                 <div class="form-floating mb-3">
                   <input type="password" class="form-control rounded-3" id="password" name="password" placeholder="New Password" required>
                   <label for="password">New Password</label>
