--- a/frontend/views/user-queries.ejs
+++ b/frontend/views/user-queries.ejs
@@ -8,9 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.112.5">
-    <title>Home</title>
+    <title>Requests</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/jumbotron/">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <!-- Favicons -->
@@ -92,14 +93,10 @@
       .bd-mode-toggle {
         z-index: 1500;
       }
-      @media (min-width: 992px) {
-        .rounded-lg-3 { border-radius: .3rem; }
-      }
     </style>
 
+
   </head>
-
-
   <body class="h-100 d-flex flex-column">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol id="check2" viewBox="0 0 16 16">
@@ -117,7 +114,7 @@
       </symbol>
     </svg>
 
-    <!-- Color modes -->
+    <!-- Color Modes -->
     <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
       <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
               id="bd-theme"
@@ -153,39 +150,48 @@
       </ul>
     </div>
 
-    <!-- header -->
+    <!-- Header -->
     <%- include('header', {user: user}) -%>
 
-
-
 <main>
-  <h1 class="visually-hidden">School Libraries</h1>
-    <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold text-body-emphasis">School Libraries</h1>
-        <div class="col-lg-6 mx-auto">
-          <% if (!user) { %><p class="lead mb-4">Log in to view books available in your school!</p> <% } %>
-          <% if (user) { %>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5 mt-4">
-              <a class="btn btn-primary btn-lg px-4 me-sm-3" type="button" href="/books">Go to books page!</a>
-          <% } else { %>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-              <a class="btn btn-primary btn-lg px-4 me-sm-3" type="button" href="/signin">Log in</a>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Sign up</button>
-            </div>
+  <div class="container py-4">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Query Results</h1>
+        <p class="col-md fs-4"><%= message %></p>
+        <ul class="list-group mb-4">
+          <li class="list-group-item d-flex justify-content-between">
+            <label class="text-center fw-bold" style="min-width: 100px">Request Date</label>
+            <label class="text-center fw-bold" style="min-width: 100px">Due Date</label>
+            <label class="text-center fw-bold" style="min-width: 100px">Status</label>
+            <label class="text-center fw-bold" style="min-width: 300px">Title</label>
+          </li>
+          
+          <% for(var i=0; i<total_items; i++) { %>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <label class="text-center" style="min-width: 100px"><%= loans[i].Date_out %></label>
+                <label class="text-center" style="min-width: 100px"><%= loans[i].Due_date %></label>
+                <label class="text-center" style="min-width: 100px"><%= loans[i].Status %></label>
+                <label class="text-center" style="min-width: 300px"><%= loans[i].Title %></label>
+                <!-- <form action="/libop-acc-req" method="POST">
+                  <input type="text" name="loanid" style="display: none" value="<%=loans[i].Loan_id%>">
+                  <input type="submit" class="btn btn-primary" value="Accept">
+                </form> -->
+                
+                <!--<button type="button" class="btn btn-primary">Accept</button>-->
+            </li>
           <% } %>
-        </div>
-        <div class="overflow-hidden" style="max-height: 30vh;">
-          <div class="container px-5">
-            <img src="images/home.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
-          </div>
-        </div>
+        </ul>
+        <a class="btn btn-primary btn-lg" type="button" href="/dashboard">Go back</a>
+      </div>
     </div>
+  </div>
 </main>
 
-  <!-- Footer -->
-  <%- include('footer') -%>
+<!-- Footer -->
+<%- include('footer') -%>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
     </body>
 </html>
